# pilot-demo

./: .gitignore  README.md  start.bat  start.sh
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: db.py  llm.py  main.py  mcp_registry.py  models.py  provenance.py  schemas.py  seed.py
backend/app/agents/: router.py  runner.py
backend/app/corrections/: __init__.py  router.py
backend/app/intake/: router.py
backend/app/ontology/: router.py
backend/app/rules/: __init__.py  router.py
backend/app/templates/: __init__.py  router.py
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AppShell.tsx
frontend/src/components/agent/: ChatPanel.tsx  ToolPicker.tsx
frontend/src/components/knowledge/: ProvenancePill.tsx
frontend/src/components/ontology/: LinkGraph.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Icon.tsx  Input.tsx  Tabs.tsx
frontend/src/components/workpaper/: CorrectionLayer.tsx  SheetTabs.tsx  SummarySheet.tsx  TableSheet.tsx  sheet-utils.ts
frontend/src/lib/: api.ts  correction-store.ts  types.ts  utils.ts
frontend/src/locales/: zh.ts
frontend/src/pages/: AgentGallery.tsx  AgentStudio.tsx  Home.tsx  IntakeWizard.tsx  KnowledgeCenter.tsx  LearningInbox.tsx  MCPServers.tsx  ObjectExplorer.tsx  OntologyManager.tsx  RuleAuthoring.tsx  ScenarioTemplates.tsx  SpecialAuditNew.tsx  SpecialAuditWorkbench.tsx  TemplateUpload.tsx  WorkingPaperWorkbench.tsx
