[project]
name = "audit-ontology-backend"
version = "0.1.0"
description = "Palantir-style audit ontology + agent platform prototype"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlmodel>=0.0.22",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "pydantic>=2.9",
  "python-multipart>=0.0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
